--- a/css/style.css
+++ b/css/style.css
@@ -40,10 +40,27 @@
   cursor: pointer;
 }
 
-.square.even{
+.square-bomb{
+  width: 50px;
+  height: 50px;
+  background-color: rgb(231, 118, 112);
+  border: 2px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  flex-grow: 0;
+  cursor: pointer;
+}
+
+/* .square.even{
   background-color: beige;
 }
 
 .square.odd{
   background-color: rgba(166, 166, 238, 0.7);
+} */
+
+.clicked{
+  background-color: beige;
 }
